# zephyr-ipmi

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: docker-build.yml
backend/: .env.example  Dockerfile  HTTPS_SETUP.md  cookies.txt  pyproject.toml
backend/app/: main.py
backend/app/api/: __init__.py
backend/app/api/routes/: __init__.py  auth.py  notifications.py  servers.py
backend/app/core/: config.py  dependencies.py  security.py
backend/app/db/: base.py  session.py
backend/app/middleware/: https_redirect.py
backend/app/models/: __init__.py  alert.py  notification.py  server.py  user.py
backend/app/schemas/: alert.py  auth.py  notification.py  server.py  user.py
backend/app/services/: ipmi.py  notification_channels.py  notifications.py  scheduler.py  servers.py  users.py
backend/scripts/: generate_ssl_cert.sh  http_redirect_server.py  start_server.sh
deploy/: docker-prod-setup.sh  docker-setup.sh  nginx.conf
docs/: README.md  architecture.md  docker.md  github-setup.md  quickstart.md  security.md
frontend/: .env.example  .eslintrc.cjs  .gitignore  Dockerfile  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/scripts/: generate_ssl_cert.sh  http_redirect_server.js  start_dev.sh
frontend/src/: main.tsx
frontend/src/components/: LoginForm.tsx  NotificationSettings.tsx  ServerForm.tsx  ServerList.tsx  UserProfile.tsx
frontend/src/routes/: App.tsx
frontend/src/services/: api.ts
frontend/src/types/: api.ts
