[tool.poetry]
name = "zephyr-ipmi-backend"
version = "0.1.0"
description = "Backend services for Zephyr IPMI fan control and monitoring"
authors = ["Zephyr IPMI Team <dev@zephyr-ipmi.local>"]
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = { extras = ["standard"], version = "^0.30.0" }
SQLAlchemy = "^2.0.30"
alembic = "^1.13.1"
psycopg = { version = "^3.1.18", optional = true, extras = ["binary"] }
python-multipart = "^0.0.9"
passlib = { version = "^1.7.4", extras = ["argon2"] }
cryptography = "^42.0.5"
apscheduler = "^3.10.4"
pydantic-settings = "^2.2.1"
pyyaml = "^6.0.1"
requests = "^2.32.3"
httpx = "^0.27.0"
python-jose = { version = "^3.3.0", optional = true }
python-dotenv = "^1.0.1"
itsdangerous = "^2.2.0"
aiosqlite = "^0.20.0"
greenlet = "^3.0.3"

[tool.poetry.extras]
postgres = ["psycopg"]
jwt = ["python-jose"]

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
ruff = "^0.5.0"
pytest = "^8.2.0"
pytest-asyncio = "^0.23.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
